# config

./: CMakeLists.txt  LICENSE  README.md
hal/: CMakeLists.txt  hal_fs.c  hal_os.c
hal/inc/: hal_fs.h  hal_os.h
include/: common.h  log.h
libs/: CMakeLists.txt  flash_config.c
libs/inc/: flash_config.h
src/: CMakeLists.txt  main.c
